KC705_AXIEthernetlite_150Mhz_64Kb/HW/project_1.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:00:44 **** Incremental Build of configuration Debug for project socket_apps ****
make all 
make: Nothing to be done for `all'.
10:13:04 **** Auto Build of configuration Debug for project rocket_apps ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -I../../rocket_apps_bsp/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v9.4 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'print_ip_settings':
../src/main.c:54:5: error: incompatible type for argument 2 of 'print_ip'
     print_ip("Board IP:       ", *ip);
     ^
../src/main.c:45:6: note: expected 'struct ip_addr *' but argument is of type 'struct ip_addr'
 void print_ip(char *msg, struct ip_addr *ip)
      ^
make: *** [src/main.o] Error 1
10:14:44 **** Auto Build of configuration Debug for project rocket_apps ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -I../../rocket_apps_bsp/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v9.4 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.c"
'Finished building: ../src/main.c'
' '
'Building target: rocket_apps.elf'
'Invoking: MicroBlaze gcc linker'
mb-gcc -Wl,-T -Wl,../src/lscript.ld -L../../rocket_apps_bsp/microblaze_0/lib -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v9.4 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -Wl,--gc-sections -o "rocket_apps.elf"  ./src/dispatch.o ./src/echo.o ./src/http_response.o ./src/main.o ./src/platform.o ./src/platform_fs.o ./src/platform_gpio.o ./src/prot_malloc.o ./src/rxperf.o ./src/tftpserver.o ./src/tftputils.o ./src/txperf.o ./src/urxperf.o ./src/utxperf.o ./src/web_utils.o ./src/webserver.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group -Wl,--start-group,-lxil,-llwip4,-lgcc,-lc,--end-group
'Finished building target: rocket_apps.elf'
' '
'Invoking: MicroBlaze Print Size'
mb-size rocket_apps.elf  |tee "rocket_apps.elf.size"
   text	   data	    bss	    dec	    hex	filename
 157028	   1616	3089572	3248216	 319058	rocket_apps.elf
'Finished building: rocket_apps.elf.size'
' '
